force-app/main/default/objects/OT_Policy__c/OT_Policy__c.object-meta.xml
<CustomObject>
    <label>OT Policy</label>
    <nameField>
        <label>Policy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OT Policy</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>