force-app/main/default/objects/OT_Policy__c/fields/BasicSalaryperHour__c.field-meta.xml
<CustomField>
    <fullName>BasicSalaryperHour__c</fullName>
    <label>Basic Salary per Hour</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>