force-app/main/default/objects/OT_Policy__c/fields/Quota__c.field-meta.xml
<CustomField>
    <fullName>Quota__c</fullName>
    <label>Quota</label>
    <precision>17</precision>
    <required>true</required>
    <scale>1</scale>
    <type>Number</type>
</CustomField>