force-app/main/default/objects/OT_Policy__c/fields/Work_Policy__c.field-meta.xml
<CustomField>
    <fullName>Work_Policy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Policy</label>
    <referenceTo>Work_Policy__c</referenceTo>
    <relationshipLabel>OT Policy</relationshipLabel>
    <relationshipName>OT_Policy</relationshipName>
    <type>Lookup</type>
</CustomField>